--- a/pages/designSystem.html
+++ b/pages/designSystem.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PancakeSwap|Develhope</title>
-  <link rel="stylesheet" href="../css/_designSystem.css" />
+  <link rel="stylesheet" href="../scss/designSystem.css" />
 </head>
 
 <body>
@@ -16,15 +16,15 @@
       <h2>Logos</h2>
       <div>
         <div class="mainLogos">
-          <img src="./logo-panckace/svgexport-1.svg" alt="" />
+          <img src="../resources/logo/svgexport-1.svg" alt="" />
           <small> Main Logo</small>
-          <img src="./logo-panckace/svgexport-2.svg" alt="" />
+          <img src="../resources/logo/svgexport-2.svg" alt="" />
           <small> Navbar Logo</small>
         </div>
         <div class="alternativeLogos">
-          <img src="./logo-panckace/svgexport-13.svg" alt="" />
+          <img src="../resources/logo/svgexport-13.svg" alt="" />
           <small> Purple Logo</small>
-          <img src="./logo-panckace/svgexport-5.svg" alt="" />
+          <img src="../resources/logo/svgexport-5.svg" alt="" />
           <small> Page Logo</small>
         </div>
       </div>
@@ -77,7 +77,7 @@
 
         <div>
           <button class="arrow-bluebutton-white">
-            Button <img src="svg/arrowright.svg" alt="arrowright" />
+            Button <img src="../resources/svg/arrowright.svg" alt="arrowright" />
           </button>
           <p>
             Button and arrow <br />
@@ -87,7 +87,7 @@
 
         <div>
           <button class="arrow-bluebutton-black">
-            Button <img src="svg/arrowright.svg" alt="arrowright" />
+            Button <img src="../resources/svg/arrowright.svg" alt="arrowright" />
           </button>
           <p>
             Button and arrow <br />
@@ -124,7 +124,7 @@
       <div class="icon">
         <h2>Icons</h2>
         <div class="container-icons">
-          <img src="svg/logoPancake.svg" alt="logoPancake" />
+          <img src="../resources/svg/logoPancake.svg" alt="logoPancake" />
           <svg viewBox="0 0 1281 199" width="160px" color="text" xmlns="http://www.w3.org/2000/svg"
             class="sc-eaf7e66-0 fIUZDs">
             <path
@@ -143,42 +143,42 @@
               d="M74.85 117.896c0 9.718-4.546 14.779-10.154 14.779s-10.154-5.061-10.154-14.779 4.546-14.779 10.154-14.779 10.154 5.061 10.154 14.779zM140.851 117.896c0 9.718-4.546 14.779-10.154 14.779s-10.154-5.061-10.154-14.779 4.546-14.779 10.154-14.779 10.154 5.061 10.154 14.779z"
               fill="#633001"></path>
           </svg>
-          <img src="svg/ingranaggio.svg" alt="logoSetting" />
-          <img src="svg/doubleArrow.svg" alt="doubleArrow" />
+          <img src="../resources/svg/ingranaggio.svg" alt="logoSetting" />
+          <img src="../resources/svg/doubleArrow.svg" alt="doubleArrow" />
           <svg viewBox="0 0 25 24" color="text" width="20px" xmlns="http://www.w3.org/2000/svg"
             class="sc-eaf7e66-0 fIUZDs">
             <path
               d="M20.497 4.6l-.004-.028-.006-.036-.008-.033-.007-.03-.012-.032-.01-.03-.014-.028-.014-.03-.016-.027-.018-.03-.021-.028-.018-.024a.663.663 0 00-.044-.048v-.001a.66.66 0 00-.049-.044l-.024-.018-.028-.02-.03-.018-.026-.016-.03-.015c-.01-.004-.02-.01-.03-.013l-.03-.011-.03-.011-.031-.008-.033-.008-.035-.005-.03-.005A.684.684 0 0019.834 4h-4.667a.667.667 0 100 1.333h3.057l-4.862 4.862a.667.667 0 10.943.943l4.862-4.862v3.057a.667.667 0 101.333 0V4.667a.658.658 0 00-.003-.066zM10.696 12.861l-4.862 4.862v-3.057a.667.667 0 10-1.333 0v4.667l.003.066.005.029.005.035.008.033.008.03.01.032.012.03.013.029.015.03.016.027.017.029.021.028.018.024a.663.663 0 00.093.093l.024.018.029.021.029.018.026.016.03.014.03.014.03.01.031.012.03.007.033.008.036.006.029.004a.657.657 0 00.066.003h4.666a.667.667 0 000-1.333H6.777l4.862-4.862a.667.667 0 00-.943-.943z">
             </path>
           </svg>
-          <img src="svg/history.svg" alt="logoHistory" />
-          <img src="svg/nograph.svg" alt="logoNoGraph" />
-          <img src="svg/logoBNB.svg" alt="logoBNB" />
+          <img src="../resources/svg/history.svg" alt="logoHistory" />
+          <img src="../resources/svg/nograph.svg" alt="logoNoGraph" />
+          <img src="../resources/svg/logoBNB.svg" alt="logoBNB" />
           <svg viewBox="0 0 24 24" class="sc-eaf7e66-0 etGTJB icon-up-down" color="primary" width="20px"
             xmlns="http://www.w3.org/2000/svg">
             <path fill="rgb(31, 199, 212)"
               d="M16 17.01V11c0-.55-.45-1-1-1s-1 .45-1 1v6.01h-1.79c-.45 0-.67.54-.35.85l2.79 2.78c.2.19.51.19.71 0l2.79-2.78c.32-.31.09-.85-.35-.85H16zM8.65 3.35L5.86 6.14c-.32.31-.1.85.35.85H8V13c0 .55.45 1 1 1s1-.45 1-1V6.99h1.79c.45 0 .67-.54.35-.85L9.35 3.35a.501.501 0 00-.7 0z">
             </path>
           </svg>
-          <img src="svg/arrowdown.svg" alt="arrowDown" />
-          <img src="svg/logocopy.svg" alt="logocopy" />
+          <img src="../resources/svg/arrowdown.svg" alt="arrowDown" />
+          <img src="../resources/svg/logocopy.svg" alt="logocopy" />
           <svg viewBox="0 0 24 24" color="text" width="20px" xmlns="http://www.w3.org/2000/svg"
             class="sc-eaf7e66-0 fIUZDs">
             <path
               d="M8.11997 9.29006L12 13.1701L15.88 9.29006C16.27 8.90006 16.9 8.90006 17.29 9.29006C17.68 9.68006 17.68 10.3101 17.29 10.7001L12.7 15.2901C12.31 15.6801 11.68 15.6801 11.29 15.2901L6.69997 10.7001C6.30997 10.3101 6.30997 9.68006 6.69997 9.29006C7.08997 8.91006 7.72997 8.90006 8.11997 9.29006Z">
             </path>
           </svg>
-          <img src="svg/arrowleft.svg" alt="arrowleft" />
-          <img src="svg/arrowright.svg" alt="arrowright" />
+          <img src="../resources/svg/arrowleft.svg" alt="arrowleft" />
+          <img src="../resources/svg/arrowright.svg" alt="arrowright" />
           <svg viewBox="0 0 24 24" color="text" width="20px" xmlns="http://www.w3.org/2000/svg"
             class="sc-eaf7e66-0 fIUZDs">
             <path
               d="M11 7H13V9H11V7ZM12 17C12.55 17 13 16.55 13 16V12C13 11.45 12.55 11 12 11C11.45 11 11 11.45 11 12V16C11 16.55 11.45 17 12 17ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z">
             </path>
           </svg>
-          <img src="svg/logodisplayRow.svg" alt="logodisplayRow" />
-          <img src="svg/logodisplaycolumn.svg" alt="logodisplaycolumn" />
-          <img src="svg/verified.svg" alt="verified" />
+          <img src="../resources/svg/logodisplayRow.svg" alt="logodisplayRow" />
+          <img src="../resources/svg/logodisplaycolumn.svg" alt="logodisplaycolumn" />
+          <img src="../resources/svg/verified.svg" alt="verified" />
           <svg viewBox="0 0 24 24" width="18px" color="text" xmlns="http://www.w3.org/2000/svg"
             class="sc-eaf7e66-0 fIUZDs">
             <path
@@ -213,16 +213,16 @@
               d="M9.7256 1C8.72367 1 7.96795 1.90072 8.15187 2.87568L8.58709 5.18266C7.11275 5.82653 6 6.93833 6 8.33333V9.18182C6 10.3351 6.77077 11.3007 7.84829 11.9526C8.93423 12.6095 10.4033 13 12 13C13.5967 13 15.0658 12.6095 16.1517 11.9526C17.2292 11.3007 18 10.3351 18 9.18182V8.33333C18 6.9309 16.8757 5.81482 15.3888 5.17222L15.8221 2.87568C16.006 1.90072 15.2503 1 14.2483 1C13.3642 1 12.6474 1.70952 12.6474 2.58476V4.53674C12.4347 4.52247 12.2187 4.51515 12 4.51515C11.7724 4.51515 11.5477 4.52308 11.3265 4.53853V2.58476C11.3265 1.70952 10.6098 1 9.7256 1Z">
             </path>
           </svg>
-          <img src="svg/logocheck.svg" alt="logocheck" />
-          <img src="svg/logodisabled.svg" alt="logodisabled" />
-          <img src="svg/logoLive.svg" alt="logoLive" />
+          <img src="../resources/svg/logocheck.svg" alt="logocheck" />
+          <img src="../resources/svg/logodisabled.svg" alt="logodisabled" />
+          <img src="../resources/svg/logoLive.svg" alt="logoLive" />
           <svg viewBox="0 0 24 24" width="21px" color="text" xmlns="http://www.w3.org/2000/svg"
             class="sc-eaf7e66-0 cBoRKO">
             <path
               d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM12.5 7.75C12.5 7.33579 12.1642 7 11.75 7C11.3358 7 11 7.33579 11 7.75V13L15.5537 15.8022C15.9106 16.0219 16.3781 15.9106 16.5978 15.5537C16.8192 15.1938 16.7041 14.7225 16.3419 14.5051L12.5 12.2V7.75Z">
             </path>
           </svg>
-          <img src="svg/logoCup.svg" alt="logoCup" />
+          <img src="../resources/svg/logoCup.svg" alt="logoCup" />
           <svg viewBox="0 0 24 24" color="textSubtle" width="20px" xmlns="http://www.w3.org/2000/svg"
             class="sc-eaf7e66-0 lhJin">
             <path
@@ -235,8 +235,8 @@
               d="M4 13C5.1 13 6 12.1 6 11C6 9.9 5.1 9 4 9C2.9 9 2 9.9 2 11C2 12.1 2.9 13 4 13ZM5.13 14.1C4.76 14.04 4.39 14 4 14C3.01 14 2.07 14.21 1.22 14.58C0.48 14.9 0 15.62 0 16.43V17C0 17.5523 0.447715 18 1 18H4.5V16.39C4.5 15.56 4.73 14.78 5.13 14.1ZM20 13C21.1 13 22 12.1 22 11C22 9.9 21.1 9 20 9C18.9 9 18 9.9 18 11C18 12.1 18.9 13 20 13ZM24 16.43C24 15.62 23.52 14.9 22.78 14.58C21.93 14.21 20.99 14 20 14C19.61 14 19.24 14.04 18.87 14.1C19.27 14.78 19.5 15.56 19.5 16.39V18H23C23.5523 18 24 17.5523 24 17V16.43ZM16.24 13.65C15.07 13.13 13.63 12.75 12 12.75C10.37 12.75 8.93 13.14 7.76 13.65C6.68 14.13 6 15.21 6 16.39V17C6 17.5523 6.44772 18 7 18H17C17.5523 18 18 17.5523 18 17V16.39C18 15.21 17.32 14.13 16.24 13.65ZM8.07 16C8.16 15.77 8.2 15.61 8.98 15.31C9.95 14.93 10.97 14.75 12 14.75C13.03 14.75 14.05 14.93 15.02 15.31C15.79 15.61 15.83 15.77 15.93 16H8.07ZM12 8C12.55 8 13 8.45 13 9C13 9.55 12.55 10 12 10C11.45 10 11 9.55 11 9C11 8.45 11.45 8 12 8ZM12 6C10.34 6 9 7.34 9 9C9 10.66 10.34 12 12 12C13.66 12 15 10.66 15 9C15 7.34 13.66 6 12 6Z">
             </path>
           </svg>
-          <img src="svg/logoNET.svg" alt="logoNET" />
-          <img src="svg/meatballMenu.svg" alt="meatballMenu" />
+          <img src="../resources/svg/logoNET.svg" alt="logoNET" />
+          <img src="../resources/svg/meatballMenu.svg" alt="meatballMenu" />
           <svg viewBox="0 0 24 24" color="text" width="20px" xmlns="http://www.w3.org/2000/svg"
             class="sc-eaf7e66-0 fIUZDs">
             <path fill="rgb(102, 97, 113)"
@@ -246,13 +246,13 @@
               d="M20 5.18347C20.5523 5.18347 21 5.63119 21 6.18347V18.1835C21 18.7358 20.5523 19.1835 20 19.1835C19.4477 19.1835 19 18.7358 19 18.1835V6.18347C19 5.63119 19.4477 5.18347 20 5.18347Z">
             </path>
           </svg>
-          <img src="svg/twitter.svg" alt="logoTwitter" />
-          <img src="svg/telegram.svg" alt="logoTelegram" />
-          <img src="svg/reddit.svg" alt="logoReddit" />
-          <img src="svg/instagram.svg" alt="logoInsta" />
-          <img src="svg/gitHub.svg" alt="logoGitHub" />
-          <img src="svg/discord.svg" alt="logoDiscord" />
-          <img src="svg/medium.svg" alt="logoMedium" />
+          <img src="../resources/svg/twitter.svg" alt="logoTwitter" />
+          <img src="../resources/svg/telegram.svg" alt="logoTelegram" />
+          <img src="../resources/svg/reddit.svg" alt="logoReddit" />
+          <img src="../resources/svg/instagram.svg" alt="logoInsta" />
+          <img src="../resources/svg/gitHub.svg" alt="logoGitHub" />
+          <img src="../resources/svg/discord.svg" alt="logoDiscord" />
+          <img src="../resources/svg/medium.svg" alt="logoMedium" />
           <svg viewBox="0 0 24 24" color="text" width="20px" xmlns="http://www.w3.org/2000/svg"
             class="sc-eaf7e66-0 fIUZDs">
             <path
@@ -332,8 +332,8 @@
               <h3>Swap</h3>
             </div>
             <div>
-              <img src="svg/ingranaggio.svg" alt="logoSetting" />
-              <img src="svg/history.svg" alt="logoHistory" />
+              <img src="../resources/svg/ingranaggio.svg" alt="logoSetting" />
+              <img src="../resources/svg/history.svg" alt="logoHistory" />
               <svg id="arrow_loading" viewBox="0 0 24 24" color="textSubtle" width="27px"
                 xmlns="http://www.w3.org/2000/svg" class="sc-eaf7e66-0 lhJin">
                 <path stroke="none" fill="#D7CAEC"
